--- a/photographer.html
+++ b/photographer.html
@@ -32,6 +32,6 @@
             </div>
         </div>
         <script src="/scripts/pages/photographer.js" type="module"></script>
-        <script src="/scripts/utils/contactForm.js" type="module"></script>
+        <script src="/scripts/utils/contactForm.js"></script>
     </body>
 </html>
