mise en place hpotographer media

--- a/photographer.html
+++ b/photographer.html
@@ -9,12 +9,13 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/logo.png" class="logo" />
+            <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
         </header>
         <main id="main">
             <div class="photograph-header">
-                <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+                <button class="contact_button" aria-label="Contact me" onclick="displayModal()">Contactez-moi</button>
             </div>
+            <div class="photograph-media"></div>
         </main>
         <div id="contact_modal">
             <div class="modal">
