--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             <div class="photographer_section"></div>
         </main>
         <script src="scripts/pages/index.js" type="module"></script>
+        <script src="scripts/utils/buildPhotographerName.js" type="module"></script>
     </body>
 </html>
