lightbox ouverture fermeture

--- a/photographer.html
+++ b/photographer.html
@@ -26,7 +26,7 @@
                     <div class="contact_info">
                         <h2>Contactez-moi</h2>
                     </div>
-                    <img src="assets/icons/close.svg" class="close_btn" />
+                    <img src="assets/icons/close.svg" class="close_btn" alt="close button" />
                 </header>
                 <form class="contact-form">
                     <label for="firstname">Prénom</label>
@@ -43,7 +43,10 @@
             </div>
         </div>
         <div class="lightbox" aria-label="lightbox">
-            <img src="assets/icons/close.svg" class="close-btn" />
+            <img src="assets/icons/closeRed.svg" class="close-btn" alt="close button" />
+            <img src="assets/icons/backward.svg" class="backward-btn" alt="photo précédente" />
+            <img src="assets/icons/forward.svg" class="forward-btn" alt="photo suivante" />
+            <div id="media"></div>
         </div>
         <script src="/scripts/pages/photographer.js" type="module"></script>
         <script src="/scripts/utils/contactForm.js" type="module"></script>
