mise en place du select + .sort

--- a/photographer.html
+++ b/photographer.html
@@ -17,6 +17,10 @@
                     <button class="contact_button" aria-label="Contact me">Contactez-moi</button>
                     <!-- onclick="displayModal()" -->
                 </div>
+                <div class="selectContainer" aria-label="contenaur du selecteur">
+                    <label for="sort">Trier par:</label>
+                    <select class="select" name="sort" id="sort"></select>
+                </div>
                 <div class="photograph-media"></div>
             </main>
         </div>
@@ -28,6 +32,7 @@
                     </div>
                     <img src="assets/icons/close.svg" class="close_btn" alt="close button" />
                 </header>
+
                 <form class="contact-form">
                     <label for="firstname">Prénom</label>
                     <input type="text" name="firstname" id="firstname" />
