accessibility main page

--- a/photographer.html
+++ b/photographer.html
@@ -8,7 +8,7 @@
         <title>Fisheye - photographe</title>
     </head>
     <body>
-        <div aria-hidden="true" class="main_page">
+        <div class="main_page">
             <header>
                 <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
             </header>
@@ -47,12 +47,12 @@
                 </form>
             </div>
         </div>
-        <div class="lightbox" aria-label="lightbox">
-            <img src="assets/icons/closeRed.svg" class="close-btn" alt="close button" />
+        <div class="lightbox" aria-label="Image closeup view">
+            <img src="assets/icons/closeRed.svg" class="close-btn" alt="Close dialog" />
             <div class="lightbox-container">
-                <a class="backward-btn"><img src="assets/icons/backward.svg" alt="photo précédente" /></a>
+                <a class="backward-btn"><img src="assets/icons/backward.svg" alt="Previous image" /></a>
                 <div class="media"></div>
-                <a class="forward-btn"><img src="assets/icons/forward.svg" alt="photo suivante" /></a>
+                <a class="forward-btn"><img src="assets/icons/forward.svg" alt="Next image" /></a>
             </div>
         </div>
         <script src="/scripts/pages/photographerPage.js" type="module"></script>
