accessibility modal contact-me

--- a/photographer.html
+++ b/photographer.html
@@ -30,7 +30,9 @@
                     <div class="contact_info">
                         <h2>Contactez-moi</h2>
                     </div>
-                    <img src="assets/icons/close.svg" class="close_btn" alt="close button" />
+                    <button class="close_btn" alt="close button">
+                        <img src="assets/icons/close.svg" />
+                    </button>
                 </header>
 
                 <form class="contact-form">
