--- a/photographer.html
+++ b/photographer.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="selectContainer" aria-label="contenaur du selecteur">
                     <label for="sort">Trier par:</label>
-                    <select class="select" name="sort" id="sort"></select>
+                    <select class="selectSortedOrder" name="sort" id="sort"></select>
                 </div>
                 <div class="photograph-media"></div>
             </main>
