Gestion des erreurs

--- a/photographerNotFound.html
+++ b/photographerNotFound.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div aria-label="Error container" class="errorMessageContainer">
-            <p class="errorMessage" aria-label="error message">Une erreur s'est produite</p>
+            <p class="errorMessage" aria-label="error message">Photographe non trouvé</p>
             <button class="errorButton" aria-label="go back to home page">
                 <a href="/"> Retour à la page d'accueil</a>
             </button>
