--- a/photographer.html
+++ b/photographer.html
@@ -17,7 +17,7 @@
                     <button class="contact_button" aria-label="Contactez moi">Contactez-moi</button>
                     <!-- onclick="displayModal()" -->
                 </div>
-                <div class="selectContainer" aria-label="contenaur du selecteur">
+                <div class="selectContainer" aria-label="contenu du selecteur">
                     <label for="sort">Trier par:</label>
                     <select class="selectSortedOrder" name="sort" id="sort"></select>
                 </div>
@@ -31,7 +31,7 @@
                         <h2>Contactez-moi</h2>
                     </div>
                     <button class="close_btn">
-                        <img src="assets/icons/close.svg" alt="close button" />
+                        <img src="assets/icons/close.svg" alt="close contact form" />
                     </button>
                 </header>
 
